# asteroid-powerd

./: .gitignore  CMakeLists.txt
data/: asteroid-powerd.service  default-profiles.json  org.asteroidos.powerd.conf
src/: CMakeLists.txt  automationengine.cpp  automationengine.h  batterymonitor.cpp  batterymonitor.h  common.h  dbusinterface.cpp  dbusinterface.h  main.cpp  org.asteroidos.powerd.xml  profilemanager.cpp  profilemanager.h  profilemodel.cpp  profilemodel.h  radiocontroller.cpp  radiocontroller.h  sensorcontroller.cpp  sensorcontroller.h  sensorfwbackend.cpp  sensorfwbackend.h  sysfsbackend.cpp  sysfsbackend.h  systemcontroller.cpp  systemcontroller.h
tests/: CMakeLists.txt  tst_automationengine.cpp  tst_batterymonitor.cpp  tst_controllers.cpp  tst_dbusinterface.cpp  tst_profilemanager.cpp  tst_profilemodel.cpp
